refactor v6.5
